:bug: fix problem route bugs
